fixed alignment of two sections

--- a/assignments/lesson-5/css/large-5.css
+++ b/assignments/lesson-5/css/large-5.css
@@ -99,9 +99,13 @@
     }
 
     .newsarticle {
-        border: 2px solid;
+        border: 1px solid lightgray;
+        background-color: #f1f1f1;
+        width: 950px;
         padding: 5px;
-        margin: 10px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .weatherreport {
@@ -119,13 +123,23 @@
     }
 
     .contactinfo {
-        border: 3px solid;
+        border: 1px solid lightgray;
+        background-color: #f1f1f1;
+        width: 950px;
+        padding: 5px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     footer{
         background-color: olivedrab;
         text-align: center;
         height: 50px;
+        width: 950px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
    .weatherforecast h3 {
@@ -134,6 +148,7 @@
 
    .weekday {
        text-align: center;
+       vertical-align: middle;
    }
 
    .temp {
