--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -123,7 +123,8 @@
     }
 
     .newsarticle {
-        border: 2px solid;
+        border: 1px solid lightgray;
+        background-color: #f1f1f1;
         padding: 5px;
         margin: 10px;
     }
@@ -143,7 +144,8 @@
     }
 
     .contactinfo {
-        border: 3px solid;
+        border: 1px solid lightgray;
+        background-color: #f1f1f1;
     }
 
     footer{
